# Xyzen

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BUG_FIX_SUMMARY.md  CHANGELOG.md  CLAUDE.md  FastAPI_MCP_Server_架构说明（main.py）.md  FastAPI_统一路由架构说明.md  FastMCP_多服务器架构说明.md  LICENSE  PLAN.md  README.md  README_CN.v2.md  TESTING_GUIDE.md  commitlint.config.mjs  justfile  main.py  package.json  publish.sh  test_register.py  verify_redis_fix.py
service/: .dockerignore  CLAUDE.md  Dockerfile  README.md  bak.db  pyproject.toml  test_mcp_client.py
service/app/: main.py
service/app/agents/: __init__.py  agent_tools.py  factory.py  graph_builder.py  graph_builder_v2.py  prompt_utils.py  types.py  utils.py
service/app/api/: __init__.py  og.py
service/app/configs/: __init__.py  airwallex.py  auth.py  database.py  ee.py  fga.py  image.py  llm.py  memory.py  novu.py  oauth.py  oss.py  payment.py  redis.py  sandbox.py  searxng.py  settler.py  telemetry.py  video.py
service/app/core/: celery_app.py  checkin.py  consume.py  limits.py  plan_catalog.py  rate_limit.py  redemption.py  session_pool.py  storage.py  subscription.py  subscription_bootstrap.py  system_agent.py  telemetry.py  user_events.py  websocket.py
service/app/ee/: __init__.py  client.py  lifecycle.py
service/app/mcp/: dynamic_mcp_server.py  knowledge.py  literature.py
service/app/models/: __init__.py  agent.py  agent_marketplace.py  agent_review.py  agent_snapshot.py  beta_survey.py  chat_share.py  consume.py  deployment.py  developer_earning.py  file.py  file_knowledge_set_link.py  gift.py  internal_application.py  message.py  payment.py  push_subscription.py  redemption.py  root_agent.py  runner.py  sandbox_profile.py  scheduled_task.py  session_stats.py  sessions.py  skill.py  skill_like.py  skill_marketplace.py  skill_snapshot.py  subscription.py  topic.py
service/app/repos/: __init__.py  agent.py  agent_marketplace.py  agent_review.py  agent_run.py  agent_snapshot.py  beta_survey.py  chat_share.py  consume.py  deployment.py  developer_earning.py  file.py  gift.py  internal_application.py  knowledge_set.py  message.py  payment.py  provider.py  push_subscription.py  redemption.py  root_agent.py  runner.py  sandbox_profile.py  scheduled_task.py  session.py  session_stats.py  skill.py  skill_like.py  skill_marketplace.py  skill_snapshot.py  subscription.py  topic.py
service/app/sandbox/: README.md  TEST_REPORT.md  __init__.py  cleanup_task.py  exceptions.py  executor.py  manager.py  models.py  resource_limits.py  result.py
service/app/schemas/: agent_event_payloads.py  chat_event_payloads.py  chat_event_types.py  chat_events.py  graph_config.py  graph_config_legacy.py  graph_config_v2.py  model_tier.py  plan_catalog.py  provider.py
service/app/tasks/: chat.py  chat_event_handlers.py  memory.py  notification.py  sandbox_cleanup.py  schedule_utils.py  scheduled.py
service/app/tools/: capabilities.py  code_executor.py  cost.py  knowledge.py  mcp.py  prepare.py  registry.py
service/app/utils/: cleanup.py  parser.py  tool_proxy.py
service/cmd/: main.py  multi_server.py  unify_route.py
service/common/code/: __init__.py  error_code.py
service/core/: agent_service.py  chat.py  consume.py  laboratory.py  mcp.py  storage.py  system_agent.py
service/core/auth/: __init__.py  dependencies.py
service/core/chat/: __init__.py  execution_router.py  langchain.py  langgraph.py  messages.py  tools.py  topic_generator.py
service/core/configs/: oss.py
service/core/llm/: service.py
service/core/marketplace/: agent_marketplace_service.py
service/core/providers/: __init__.py  anthropic.py  azure_openai.py  base.py  config.py  config_manager.py  factory.py  google.py  manager.py  openai.py  startup.py
service/docs/: sandbox.md
service/handler/api/: proxy.py
service/handler/mcp/: __init__.py  duckduckgo_search.py  dynamic_mcp_server.py  google_search.py  graph_tools.py  knowledge.py  lab.py  lab.rest
service/internal/configs/: __init__.py  config.py  dynamic_mcp_server.py  lab.py  llm.py  oss.py  redemption.py
service/middleware/: dynamic_mcp_server.py
service/middleware/logger/: __init__.py
service/migrations/: env.py
service/migrations/versions/: 05df78067347_add_sandbox_backend_to_sessions.py  17c153d0d131_add_subscription.py  (+54 more)
service/models/: __init__.py  agent.py  agent_marketplace.py  agents.py  mcp.py  messages.py  provider.py  providers.py  sessions.py  topics.py
service/repo/: message.py  session.py
service/repos/: __init__.py  agent.py  agent_like.py  agent_marketplace.py  agent_snapshot.py  consume.py  file.py  folder.py  graph.py  knowledge_set.py  mcp.py  message.py  provider.py  redemption.py  session.py  tool.py  topic.py
service/repository/: provider_repository.py
service/schemas/: chat_events.py  provider.py
service/tests/: README.md  pytest-guide-zh.md
service/utils/: built_in_tools.py  cleanup.py  manage_tools.py  tool_loader.py  tool_management.py  tool_proxy.py
(+992 files in other folders)
